workspace.txt
                                                                                                                                                                                                     
genetic-algorithm on  feature/generic_continuous_genotype [$+⇡] is 📦 v0.8.2 via 💎 v3.1.2 via 🦀 v1.78.0
➜ cargo build
   Compiling genetic_algorithm v0.8.2 (/Users/basvanwesting/sandbox/genetic-algorithm)
warning: unused imports: `BinaryGenotype`, `ContinuousGenotype`, `DiscreteGenotype`, `Genotype`, `MultiContinuousGenotypeAllele`, `MultiContinuousGenotype`, `MultiDiscreteGenotype`, `MultiUniqueGen
otype`, `UniqueGenotype`
 --> src/fitness/placeholders.rs:5:27
  |
5 |     Allele, BinaryAllele, BinaryGenotype, ContinuousAllele, ContinuousGenotype, DiscreteGenotype,
  |                           ^^^^^^^^^^^^^^                    ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^
6 |     Genotype, MultiContinuousGenotype, MultiContinuousGenotypeAllele, MultiDiscreteGenotype,
  |     ^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^
7 |     MultiUniqueGenotype, UniqueGenotype,
  |     ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
                                                                                                                                                                                                     
error[E0207]: the type parameter `G` is not constrained by the impl trait, self type, or predicates
   --> src/strategy/hill_climb.rs:418:17
    |
418 | impl<A: Allele, G: IncrementalGenotype<Allele = A>> HillClimbState<A> {
    |                 ^ unconstrained type parameter
                                                                                                                                                                                                     
error[E0283]: type annotations needed
   --> src/strategy/hill_climb.rs:171:20
    |
171 |         self.state.reset_scaling(&self.config);
    |                    ^^^^^^^^^^^^^ cannot infer type for type parameter `G`
    |
    = note: cannot satisfy `_: IncrementalGenotype`
    = help: the following types implement trait `IncrementalGenotype`:
              binary::Binary
              Continuous
              Discrete<T>
              MultiContinuous
              MultiDiscrete<T>
              MultiUnique<T>
              unique::Unique<T>
note: required by a bound in `HillClimbState::<A>::reset_scaling`
   --> src/strategy/hill_climb.rs:418:20
    |
418 | impl<A: Allele, G: IncrementalGenotype<Allele = A>> HillClimbState<A> {
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `HillClimbState::<A>::reset_scaling`
...
438 |     fn reset_scaling(&mut self, hill_climb_config: &HillClimbConfig) {
    |        ------------- required by a bound in this associated function

error[E0283]: type annotations needed
   --> src/strategy/hill_climb.rs:428:22
    |
428 |                 self.reset_scaling(config);
    |                      ^^^^^^^^^^^^^ cannot infer type for type parameter `G`
    |
    = note: cannot satisfy `_: IncrementalGenotype`
    = help: the following types implement trait `IncrementalGenotype`:
              binary::Binary
              Continuous
              Discrete<T>
              MultiContinuous
              MultiDiscrete<T>
              MultiUnique<T>
              unique::Unique<T>
note: required by a bound in `HillClimbState::<A>::reset_scaling`
   --> src/strategy/hill_climb.rs:418:20
    |
418 | impl<A: Allele, G: IncrementalGenotype<Allele = A>> HillClimbState<A> {
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `HillClimbState::<A>::reset_scaling`
...
438 |     fn reset_scaling(&mut self, hill_climb_config: &HillClimbConfig) {
    |        ------------- required by a bound in this associated function

Some errors have detailed explanations: E0207, E0283.
For more information about an error, try `rustc --explain E0207`.
warning: `genetic_algorithm` (lib) generated 1 warning
error: could not compile `genetic_algorithm` (lib) due to 3 previous errors; 1 warning emitted
                                                                                                                                                                                                     
genetic-algorithm on  feature/generic_continuous_genotype [$+⇡] is 📦 v0.8.2 via 💎 v3.1.2 via 🦀 v1.78.0
❯
